--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <header>
             <h1>Random quote machine</h1>
         </header>
-        <div class="box">
+        <div class="box text-center">
             <h2 class="quote"></h2>
             <h3 class="author"></h3>
         </div>
         <div class="joke text-center">
-            <button type="button" class="btn btn-primary trigger"> Random quote </button>
-            <br>
-            <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+            <button type="button" class="btn trigger">Random quote</button><br>
+            
+            <a href="#" target="_blank" class="tweet"><button type="button" class="btn"><i class="fa fa-lg fa-twitter"></i>Tweet</button></a>
         </div>
     </main>
 
